<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dimen_6"
    android:id="@+id/dialog_fragment"
    tools:context=".ui.activities.main.AddProjectFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8">

        <EditText
            android:inputType="text"
            android:id="@+id/edt_projectName"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/dimen_16"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_border"
            android:hint="@string/project_name"
            android:padding="@dimen/dimen_6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.29" />


        <EditText
            android:id="@+id/edt_projectDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16"
            android:background="@drawable/grey_border"
            android:hint="@string/project_description"
            android:inputType="textMultiLine"
            android:padding="@dimen/dimen_6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_projectName" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_24"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:padding="@dimen/dimen_16"
            style="@style/primaryFlatButton"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toBottomOf="@id/edt_projectDescription" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>