<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/add_task_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_12"
        tools:context=".ui.activities.addTask.AddTaskActivity">

        <TextView
            android:id="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Task Reminder" />

        <TextView
            android:id="@+id/project_description"
            android:layout_width="@dimen/dimen_250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4"
            android:maxLines="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="@id/project_name"
            app:layout_constraintTop_toBottomOf="@id/project_name"
            tools:text="An app that reminds users of a particular task" />

        <ImageView
            android:id="@+id/notification_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/select_to_notify"
            android:src="@drawable/ic_notifications_none"
            app:layout_constraintBottom_toBottomOf="@id/project_description"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/project_name" />

        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorAccent"
            app:layout_constraintRight_toRightOf="@id/notification_img"
            app:layout_constraintTop_toBottomOf="@id/notification_img"
            tools:text="9:00am . Wed 24 " />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:background="@drawable/grey_border"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:padding="@dimen/dimen_8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_time" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150dp"
            android:layout_marginTop="@dimen/dimen_12"
            android:background="@drawable/grey_border"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textCapSentences"
            android:maxLines="6"
            android:padding="@dimen/dimen_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_title" />

        <ImageButton
            android:id="@+id/img_mic"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginStart="@dimen/dimen_12"
            android:layout_marginTop="@dimen/dimen_24"
            android:background="@drawable/rounded_image"
            android:src="@drawable/ic_mic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_description" />

        <ImageButton
            android:id="@+id/img_play"
            android:layout_width="@dimen/dimen_25"
            android:layout_height="@dimen/dimen_25"
            android:layout_marginStart="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_24"
            android:background="@drawable/rounded_image"
            android:src="@drawable/ic_play_arrow"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/img_mic"
            app:layout_constraintLeft_toLeftOf="@id/img_mic"
            app:layout_constraintRight_toRightOf="@id/img_mic" />

        <View
            android:id="@+id/divider"
            android:layout_width="0.5dp"
            android:layout_height="@dimen/dimen_70dp"
            android:layout_marginStart="@dimen/dimen_24"
            android:background="@color/dividerColor"
            app:layout_constraintBottom_toBottomOf="@id/img_mic"
            app:layout_constraintLeft_toRightOf="@id/img_mic"
            app:layout_constraintTop_toTopOf="@id/img_mic" />


        <TextView
            android:id="@+id/priority_1"
            android:layout_width="@dimen/dimen_56"
            android:layout_height="@dimen/dimen_56"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_8"
            android:background="@drawable/circular_border"
            android:gravity="center"
            android:text="@string/_1"
            android:textSize="@dimen/text_size_16"
            android:transitionName="PriorityTransition"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintLeft_toRightOf="@id/divider"
            app:layout_constraintRight_toLeftOf="@id/priority_2"
            app:layout_constraintTop_toTopOf="@id/divider" />

        <TextView
            android:id="@+id/priority_2"
            android:layout_width="@dimen/dimen_56"
            android:layout_height="@dimen/dimen_56"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_8"
            android:background="@drawable/circular_border"
            android:gravity="center"
            android:text="@string/_2"
            android:textSize="@dimen/text_size_16"
            android:transitionName="PriorityTransition"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintLeft_toRightOf="@id/priority_1"
            app:layout_constraintRight_toLeftOf="@id/priority_3"
            app:layout_constraintTop_toTopOf="@id/divider" />

        <TextView
            android:id="@+id/priority_3"
            android:layout_width="@dimen/dimen_56"
            android:layout_height="@dimen/dimen_56"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_8"
            android:background="@drawable/circular_border"
            android:gravity="center"
            android:text="@string/_3"
            android:textSize="@dimen/text_size_16"
            android:transitionName="PriorityTransition"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintLeft_toRightOf="@id/priority_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider" />


        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/ic_save_black_24dp"
            android:drawablePadding="@dimen/dimen_12"
            android:padding="@dimen/dimen_4"
            android:paddingStart="@dimen/dimen_12"
            android:paddingEnd="@dimen/dimen_12"
            android:text="@string/save_btn"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete_btn"
            app:layout_constraintTop_toBottomOf="@id/img_mic" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/ic_delete_forever"
            android:drawablePadding="@dimen/dimen_12"
            android:padding="@dimen/dimen_4"
            android:paddingStart="@dimen/dimen_12"
            android:paddingEnd="@dimen/dimen_12"
            android:text="@string/delete_btn"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/save_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/save_btn" />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>